# toccata

./: .gitignore  CMakeLists.txt  README.md  config.h.in  core.h  toccata.toc
examples/: CMakeLists.txt
foundry/docker/: Development.docker  bashrc
regression-tests/: CMakeLists.txt
tools/: CMakeLists.txt  toc-ir.toc
